fix: fix spacing for old prices and scaled prices
* correct PurgeCSS styling exemption for date picker styles too

--- a/src/styles/pages/productdetail/product-info.scss
+++ b/src/styles/pages/productdetail/product-info.scss
@@ -48,20 +48,6 @@ a.product-title {
     }
   }
 
-  .sale-price {
-    font-size: 30px;
-  }
-
-  .old-price {
-    margin: 0;
-  }
-
-  .was-price {
-    font-size: 18px;
-    color: $text-color-quaternary;
-    text-decoration: line-through;
-  }
-
   .ready-for-shipment,
   .product-availability {
     color: $text-color-primary;
